# SentinelRAG

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  scaffold.py  verify.py
backend/: README.md  pyproject.toml  test_api.py  test_retrieval.py
backend/app/: main.py
backend/app/api/: README.md  routers.py
backend/app/api/endpoints/: chat.py  documents.py
backend/app/api/mappers/: document_mapper.py
backend/app/common/exceptions/: README.md
backend/app/common/responses/: README.md
backend/app/common/types/: README.md
backend/app/common/utils/: README.md
backend/app/common/validators/: README.md
backend/app/config/: README.md  settings.py  thresholds.py
backend/app/core/: README.md
backend/app/database/: README.md
backend/app/dependencies/: README.md
backend/app/features/context_evaluation/: evaluator.py  models.py
backend/app/middleware/: README.md
backend/app/models/: README.md
backend/app/monitoring/: README.md
backend/app/observability/: README.md
backend/app/providers/: README.md
backend/app/repositories/: README.md
backend/app/schemas/: README.md  chat.py  document.py
backend/app/services/: README.md
backend/app/workers/: README.md
backend/tests/: test_phase4.py
backend/tests/api/: README.md
backend/tests/evaluation/: README.md
backend/tests/fixtures/: README.md
backend/tests/integration/: README.md  test_chat_integration.py  test_phase5.py
backend/tests/performance/: README.md
backend/tests/rag/: README.md
backend/tests/unit/: README.md
infra/: README.md
(+85 files in other folders)
