[project]
name = "sentinelrag-backend"
version = "0.1.0"
description = "SentinelRAG Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "pillow>=12.3.0",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.2",
]
ai = [
    "langchain>=0.2.6",
    "langgraph>=0.1.1",
    "qdrant-client>=1.9.1",
    "sentence-transformers>=3.0.1",
    "google-genai>=0.5.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.7",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v"
testpaths = [
    "tests",
]
pythonpath = [
  "."
]
